tenants/base/rocky/yellow.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yellow
  name: yellow
  namespace: rocky-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellow
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: yellow
    spec:
      containers:
      - image: jpetazzo/color
        name: color
---
apiVersion: v1
kind: Service
metadata:
  name: yellow
  namespace: rocky-test
  labels:
    app: yellow
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: yellow
