tenants/base/rocky/M6-rocky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocky
  namespace: rocky-test
spec:
  ingressClassName: "nginx"
  rules:
    - host: rocky.test.mybestdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http
                port:
                  number: 80
