tenants/base/rocky/yellow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yellow
  namespace: rocky-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-issuer
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - yellow.tipzip.xyz
    secretName: yellow-tls
  rules:
    - host: yellow.tipzip.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yellow
                port:
                  number: 80
